fixed submit button not showing issue

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -7626,7 +7626,8 @@ span.required {
       max-width: 80px; }
 
 .btn {
-  border-radius: 2px; }
+  border-radius: 2px; 
+display: inline !important;}
   .btn.btn-plain {
     background: none;
     padding: 0;
